--- a/app/templates/individual.html
+++ b/app/templates/individual.html
@@ -1,56 +1,46 @@
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Welcome!</title>
-    </head>
-    <body>
-        <!-- import plugin script -->
-<script src="static/Chart.min.js"></script>
-<h1>Flask Chart.js</h1>
-<!-- bar chart canvas element -->
-<canvas id="chart" width="600" height="400"></canvas>
+<head>  
+<script>
+window.onload = function () {
 
-<script></p>
-<p>   // bar chart data<br />
-   var barData = {<br />
-   labels : [],<br />
-   datasets : [<br />
-      {<br />
-            fillColor: "rgba(151,187,205,0.2)",<br />
-            strokeColor: "rgba(151,187,205,1)",<br />
-            pointColor: "rgba(151,187,205,1)",<br />
-            pointStrokeColor: "#fff",<br />
-            pointHighlightFill: "#fff",<br />
-            pointHighlightStroke: "rgba(151,187,205,1)",<br />
-            bezierCurve : false,<br />
-            data : []<br />
-      }]<br />
-   }</p>
-<p>    Chart.defaults.global.animationSteps = 50;<br />
-    Chart.defaults.global.tooltipYPadding = 16;<br />
-    Chart.defaults.global.tooltipCornerRadius = 0;<br />
-    Chart.defaults.global.tooltipTitleFontStyle = "normal";<br />
-    Chart.defaults.global.tooltipFillColor = "rgba(0,0,0,0.8)";<br />
-    Chart.defaults.global.animationEasing = "easeOutBounce";<br />
-    Chart.defaults.global.responsive = false;<br />
-    Chart.defaults.global.scaleLineColor = "black";<br />
-    Chart.defaults.global.scaleFontSize = 16;</p>
-<p>   // get bar chart canvas<br />
-   var mychart = document.getElementById("chart").getContext("2d");</p>
-<p>   steps = 10<br />
-   max = 10<br />
-   // draw bar chart<br />
-   var LineChartDemo = new Chart(mychart).Line(barData, {<br />
-        scaleOverride: true,<br />
-        scaleSteps: steps,<br />
-        scaleStepWidth: Math.ceil(max / steps),<br />
-        scaleStartValue: 0,<br />
-        scaleShowVerticalLines: true,<br />
-        scaleShowGridLines : true,<br />
-        barShowStroke : true,<br />
-        scaleShowLabels: true,<br />
-        bezierCurve: false,</p>
-<p>   });</p>
-<p></script>
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+	theme: "light2",
+	title:{
+		text: "Simple Line Chart"
+	},
+	axisY:{
+		includeZero: false
+	},
+	data: [{        
+		type: "line",       
+		dataPoints: [
+			{% for item in values %}
+				{y: {{item}} },
+			{% endfor %}
+			// { y: 450 },
+			// { y: 414},
+			// { y: 520, indexLabel: "highest",markerColor: "red", markerType: "triangle" },
+			// { y: 460 },
+			// { y: 450 },
+			// { y: 500 },
+			// { y: 480 },
+			// { y: 480 },
+			// { y: 410 , indexLabel: "lowest",markerColor: "DarkSlateGrey", markerType: "cross" },
+			// { y: 500 },
+			// { y: 480 },
+			// { y: 510 }
+		]
+	}]
+});
+chart.render();
 
-    </body>
+}
+</script>
+</head>
+<body>
+<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+</body>
 </html>
