--- a/app/templates/individual.html
+++ b/app/templates/individual.html
@@ -8,7 +8,7 @@ var chart = new CanvasJS.Chart("chartContainer", {
 	animationEnabled: true,
 	theme: "light2",
 	title:{
-		text: "Simple Line Chart"
+		text: {{symbol}}
 	},
 	axisY:{
 		includeZero: false
