--- a/app/templates/quiz.1.html
+++ b/app/templates/quiz.1.html
@@ -149,7 +149,7 @@
   <!--</div>-->
       <div class="container">
         
-         <h3><center>How much money are you willing to invest?</center></h3> <br>
+         <h3><center>How much money are you willing to invest? (in USD $)</center></h3> <br>
         <center>
         <form method="post" action="/results">
             <input type="text" name="investment_amount" value="Enter investment amount"/>
