--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -32,7 +32,7 @@
     <form action="/auth" name="main" method="POST" >
       <input type="text" name="user" placeholder = 'username'>
       <br>
-      <input type="text" name="pass" placeholder = 'password'>
+      <input type="password" name="pass" placeholder = 'password'>
       <br>
       <br>
       <button name="enter:" type="submit">
@@ -50,8 +50,8 @@
 
     <form action= "/register" method="POST">
       <input type = "text" name = "Username" placeholder = 'Username'><br>
-      <input type = "text" name = "Password" placeholder = 'password'><br>
-      <input type = "text" name = "Confirm_Password" placeholder = 'Retype your password'><br>
+      <input type = "password" name = "Password" placeholder = 'password'><br>
+      <input type = "password" name = "Confirm_Password" placeholder = 'Retype your password'><br>
       <br>
       <input type = "submit" value="Register">
       </form>   
