--- a/app/templates/quiz.1.html
+++ b/app/templates/quiz.1.html
@@ -11,6 +11,7 @@
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="img/2.png" type="image/png">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/animate.css">
     <link rel="stylesheet" href="static/css/LineIcons.css">
@@ -56,6 +57,17 @@
     <!--      </div>-->
     <!--    </div>-->
     <!--  </nav>  -->
+    
+          
+    {% block error %}
+        {% if error %}
+            <div class="alert alert-warning" role="alert">{% set msgs = get_flashed_messages() %}
+              {{ msgs[0] }}
+          </div>
+        {% endif %}
+    {% endblock %}
+ 
+    
      <div class="row">
       <div class="col-lg-6 col-md-12 pl-0 pt-70 pr-5">
         
@@ -135,6 +147,7 @@
     <!--</section>-->
     <!-- Services Section End -->
 
+    <form method="post" action="/results">
 
     <!-- Cool Fetatures Section Start -->
     <section id="features" class="section">
@@ -151,7 +164,6 @@
         
          <h3><center>How much money are you willing to invest? (in USD $)</center></h3> <br>
         <center>
-        <form method="post" action="/results">
             <input type="text" name="investment_amount" value="Enter investment amount"/>
             <br><br><br><br><br>
              <h3><center>What level of volatility do you want?</center></h3> 
@@ -318,8 +330,6 @@
           </div>
            <!-- End Col -->
             <br><br><br><br>
-        <input type="submit" value="Submit"/>   
-        </form>
         </center> <br><br><br><br>
         
         <!--<h3><center>What level of volatility do you want?</center></h3> <br>-->
@@ -509,7 +519,7 @@
                 </div>
                 <br>
                  <div class="submit-button">
-                  <a href="/results" class="btn btn-border-filled">See Results</a>
+                  <button type="submit" class="btn btn-success">See Results</button>
                   <div id="msgSubmit" class="h3 hidden"></div> 
                   <div class="clearfix"></div> 
                 </div>
@@ -518,6 +528,8 @@
           </div>
 
         </div>
+        
+        </form>
         <!-- End Row -->
         <!-- Start Row -->
     <!--    <div class="row justify-content-center showcase-area">-->
