small modification in results page

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <center><h1>Your Stocks</h1></center>
-        <p></p>
+        <center><p>Click on stock symbol to invest.</p></center>
         <table class="table table-hover">
             <thead class="thead-dark">
                 <tr>
