--- a/app/templates/individual.html
+++ b/app/templates/individual.html
@@ -119,7 +119,7 @@ function toogleDataSeries(e){
   	</div>
  
 	Purchase your shares here
-	<form action="/portfolio">
+	<form action="/portfolio", method="POST">
 		<input type="text" name="num Shares" value="Shares"/>
 		<input type="submit" value="Purchase!"/>
 	</form>
