--- a/app/templates/index3.html
+++ b/app/templates/index3.html
@@ -5,4 +5,8 @@
 <li class="nav-item">
     <a class="btn btn-singin" href="/logout">Sign Out</a>
 </li>
+
+<li class="nav-item">
+    <a class="btn btn-singin" href="/portfolio">View Portfolio</a>
+</li>
 {% endblock %}
