--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,7 +65,7 @@
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
               <h2 class="head-title">The Brains Behind <br>Your Investing</h2>
-              <p>AI-powered software that curates an investment <br> portfolio for your unique financial needs</p>
+              <p>An app that curates an investment <br> portfolio for your unique financial needs</p>
               <div class="header-button">
                 <a href="/quiz" class="btn btn-border-filled">Get Started</a>
                 <a href="#contact" class="btn btn-border page-scroll">Contact Us</a>
@@ -84,50 +84,48 @@
 
 
     <!-- Services Section Start -->
-    <section id="services" class="section">
-      <div class="container">
+    <!--<section id="services" class="section">-->
+    <!--  <div class="container">-->
 
-        <div class="row">
+    <!--    <div class="row">-->
           <!-- Start Col -->
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="services-item text-center">
-              <div class="icon">
-                <i class="lni-cog"></i>
-              </div>
-              <h4>Bootstrap 4</h4>
-              <p>Share processes and data secure lona need to know basis Our team assured your web site is always safe.</p>
-            </div>
-          </div>
+    <!--      <div class="col-lg-4 col-md-6 col-xs-12">-->
+    <!--        <div class="services-item text-center">-->
+    <!--          <div class="icon">-->
+    <!--            <i class="lni-cog"></i>-->
+    <!--          </div>-->
+    <!--          <h4>Made for Students, by Students</h4>-->
+    <!--          <p>Most students are interested in investing but don't have the resources or background to do so. Our application aims to solve this issue by curating personalized stock portfolios that fit each user's unique financial needs. </p>-->
+    <!--        </div>-->
+    <!--      </div>-->
           <!-- End Col -->
           <!-- Start Col -->
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="services-item text-center">
-              <div class="icon">
-                <i class="lni-brush"></i>
-              </div>
-              <h4>Slick Design</h4>
-              <p>Share processes and data secure lona need to know basis Our team assured your web site is always safe.</p>
-            </div>
-          </div>
+    <!--      <div class="col-lg-4 col-md-6 col-xs-12">-->
+    <!--        <div class="services-item text-center">-->
+    <!--          <div class="icon">-->
+    <!--            <i class="lni-brush"></i>-->
+    <!--          </div>-->
+    <!--          <h4>Slick Design</h4>-->
+    <!--          <p>Share processes and data secure lona need to know basis Our team assured your web site is always safe.</p>-->
+    <!--        </div>-->
+    <!--      </div>-->
           <!-- End Col -->
           <!-- Start Col -->
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="services-item text-center">
-              <div class="icon">
-                <i class="lni-heart"></i>
-              </div>
-              <h4>Crafted with Love</h4>
-              <p>Share processes and data secure lona need to know basis Our team assured your web site is always safe.</p>
-            </div>
-          </div>
+    <!--      <div class="col-lg-4 col-md-6 col-xs-12">-->
+    <!--        <div class="services-item text-center">-->
+    <!--          <div class="icon">-->
+    <!--            <i class="lni-heart"></i>-->
+    <!--          </div>-->
+    <!--          <h4>Crafted with Love</h4>-->
+    <!--          <p>Share processes and data secure lona need to know basis Our team assured your web site is always safe.</p>-->
+    <!--        </div>-->
+    <!--      </div>-->
           <!-- End Col -->
 
-        </div>
-      </div>
-    </section>
+    <!--    </div>-->
+    <!--  </div>-->
+    <!--</section>-->
     <!-- Services Section End -->
-
-
 
     <!-- Business Plan Section Start -->
     <section id="business-plan">
@@ -137,17 +135,17 @@
           <!-- Start Col -->
           <div class="col-lg-6 col-md-12 pl-0 pt-70 pr-5">
             <div class="business-item-img">
-              <img src="img/business/business-img.png" class="img-fluid" alt="">
+              <img src="static/img/business/business-img.png" class="img-fluid" alt="">
             </div>
           </div>
           <!-- End Col -->
           <!-- Start Col -->
           <div class="col-lg-6 col-md-12 pl-4">
             <div class="business-item-info">
-              <h3>Crafted For Business, Startup and Agency Websites</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <br> commodo consequat. Duis aute irure dolor in reprehenderit in voluptate <br> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              <h3>Made for Students, by Students</h3>
+              <p>Most students are interested in investing but don't have the resources or background to do so. Our application aims to solve this issue by curating personalized stock portfolios that fit each user's unique financial needs. Click below to take our assessment and see your personalized stock recommendations!</p>
 
-              <a class="btn btn-common" href="#">download</a>
+              <a class="btn btn-common" href="/quiz">Take Quiz</a>
             </div>
           </div>
           <!-- End Col -->
@@ -156,9 +154,6 @@
       </div>
     </section>
     <!-- Business Plan Section End -->
-
-
-
     <!-- Cool Fetatures Section Start -->
     <section id="features" class="section">
       <div class="container">
@@ -308,7 +303,7 @@
             <div class="showcase-slider owl-carousel">
               <div class="item">
                 <div class="screenshot-thumb">
-                  <img src="img/showcase/01.jpg" class="img-fluid" alt="" />
+                  <img src="static/img/showcase/01.jpg" class="img-fluid" alt="" />
                   <div class="hover-content text-center">
                     <div class="fancy-table">
                       <div class="table-cell">
@@ -908,10 +903,9 @@
           <div class="col-lg-12">
             <div class="team-text section-header text-center">  
               <div>   
-                <h2 class="section-title">Team Members</h2>
+                <h2 class="section-title">Our Team</h2>
                 <div class="desc-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>  
-                  <p>eiusmod tempor incididunt ut labore et dolore.</p>
+                  <p>See the people who brought this website to life!</p>  
                 </div>
               </div> 
             </div>
@@ -925,7 +919,7 @@
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
               <div class="team-thumb">
-                <img src="img/team/01.jpg" class="img-fluid" alt="">
+                <img src="../static/img/team/01.jpg" class="img-fluid" alt="">
               </div>
 
               <div class="team-details">
@@ -937,8 +931,8 @@
                   </ul>
                 </div> 
                 <div class="team-inner text-center">
-                  <h5 class="team-title">Patric Green</h5>
-                  <p>Lead Designer</p>
+                  <h5 class="team-title">Amulya Balakrishnan</h5>
+                  <p>University of Southern California</p>
                 </div>
               </div>
             </div>
@@ -949,7 +943,7 @@
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
               <div class="team-thumb">
-                <img src="img/team/02.jpg" class="img-fluid" alt="">
+                <img src="../static/img/team/02.jpg" class="img-fluid" alt="">
               </div>
 
               <div class="team-details">
@@ -961,8 +955,8 @@
                   </ul>
                 </div>
                 <div class="team-inner text-center">
-                  <h5 class="team-title">Celina D Cruze</h5>
-                  <p>Front-end Developer</p>
+                  <h5 class="team-title">Simon Tsui</h5>
+                  <p>UC Berkeley</p>
                 </div>
               </div>
             </div>
@@ -973,7 +967,7 @@
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
               <div class="team-thumb">
-                <img src="img/team/03.jpg" class="img-fluid" alt="">
+                <img src="../static/img/team/03.jpg" class="img-fluid" alt="">
               </div>
 
               <div class="team-details">
@@ -985,8 +979,8 @@
                   </ul>
                 </div>
                 <div class="team-inner text-center">
-                  <h5 class="team-title">Daryl Dixon</h5>
-                  <p>Content Writer</p>
+                  <h5 class="team-title">Marisa Shuman</h5>
+                  <p>Advisor</p>
                 </div>
               </div>
             </div>
@@ -997,7 +991,7 @@
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
               <div class="team-thumb">
-                <img src="img/team/04.jpg" class="img-fluid" alt="">
+                <img src="../static/img/team/04.jpg" class="img-fluid" alt="">
               </div>
 
               <div class="team-details">
@@ -1009,8 +1003,8 @@
                   </ul>
                 </div>
                 <div class="team-inner text-center">
-                  <h5 class="team-title">Mark Parker</h5>
-                  <p>Support Engineer</p>
+                  <h5 class="team-title">Eliseo Rivera</h5>
+                  <p>Advisor</p>
                 </div>
               </div>
             </div>
@@ -1131,8 +1125,8 @@
               <div>   
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="desc-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>  
-                  <p>eiusmod tempor incididunt ut labore et dolore.</p>
+                  <p>If you're interested in contacting us or joining our team, </p>  
+                  <p>please fill out the form below!.</p>
                 </div>
               </div> 
             </div>
@@ -1193,7 +1187,7 @@
           <!-- Start Col -->
           <div class="col-lg-4 col-md-12">
             <div class="contact-img">
-              <img src="img/contact/01.png" class="img-fluid" alt="">
+              <img src="../static/img/contact/01.png" class="img-fluid" alt="">
             </div>
           </div>
           <!-- End Col -->
