--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -7,16 +7,93 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <div class="header">
+      <h1>{{user}}'s Portfolio</h1>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+    
+    <div class="container">
+      <div class="row">
+        <form action="/purchase" method="post">
+        <div class="col">
+          <input type="text" name="symbol" value="stock symbol">
+        </div>
+        <div class="col">
+          <input type="text" name="shares" value="# of shares">
+        </div>
+        <div class="col">
+            <button type="button" class="btn btn-primary">Purchase</button>
+        </div>
+        </form>
+        <form action = "/sell" method="post">
+          <div class="col">
+          <input type="text" name="symbol" value="stock symbol">
+        </div>
+        <div class="col">
+          <input type="text" name="shares" value="# of shares">
+        </div>
+          <div class="col">
+            <button type="button" class="btn btn-primary">Sell</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    
+        
+      
+      
+    <h2>Current Portfolio Holdings</h2>
+    <table style="text-align:center" class ="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th>Stock Symbol</th>
+            <th># of Shares</th>
+            <th>Purchase Price</th>
+            <th>Purchase Date</th>
+        </tr>
+        </thead>
+	{% for item in stock_portfolio %}
+	<tr>
+        <td>{{item.stock}}</td>
+        <td>{{item.shares}}</td>
+        <td>{{item.purchase_price}}</td>
+        <td>{{item.purchase_date}}</td>
+    </tr>
+	{% endfor %}
+	</table>
+	<h2>Trade History for {{user}}</h2>
+	    <table style="text-align:center" class ="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th>Purchase/Sale</th>
+            <th>Stock Symbol</th>
+            <th># of Shares</th>
+            <th>Purchase Price</th>
+            <th>Purchase Date</th>
+        </tr>
+        </thead>
+	{% for item in stock_history %}
+	<tr>
+	    <td>{{item.option}}</td>
+        <td>{{item.stock}}</td>
+        <td>{{item.shares}}</td>
+        <td>{{item.purchase_price}}</td>
+        <td>{{item.purchase_date}}</td>
+    </tr>
+	{% endfor %}
+	</table>
+	
+	</div>
   </body>
 </html>
