--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,8 @@
   <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
     <title> LOG IN </title>
   </head>
@@ -43,7 +45,7 @@
       </div>
       <br>
       <br>
-      <button name="enter:" type="submit">
+      <button name="enter:" type="submit" class="btn btn-primary">
       Submit
       </button>
     </form>
@@ -78,7 +80,7 @@
       </div>
       <!--</div>-->
       <br>
-      <input type = "submit" value="Register">
+      <button type = "submit" value="Register"  class="btn btn-primary">
       </form>   
     </div>
   </body>
