--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -32,7 +32,9 @@
    
     
     <div class="header">
-      <h1>{{user}}'s Portfolio</h1>
+      <div class ="col">
+        <h1>{{user}}'s Portfolio</h1>
+      </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -65,6 +67,12 @@
             <button type="submit" class="btn btn-primary">Sell</button>
           </div>
         </form>
+        
+      <div class = "col" style="text-align:right">
+      <form action="/index">
+        <button type="submit" class="btn btn-primary">Home Page</button>
+      </form>
+      </div>
       </div>
     </div>
     
