--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,6 +39,9 @@
       </div>
       <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
         <div class="container">
+          <div style="height:43px;">
+            <h1 style="color:white" class="head-title">MindVest</h1>
+          </div>
           <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt=""></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
