--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -80,7 +80,7 @@
       </div>
       <!--</div>-->
       <br>
-      <button type = "submit" value="Register"  class="btn btn-primary">
+      <button type = "submit" value="Register"  class="btn btn-primary"> Register </button>
       </form>   
     </div>
   </body>
