--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -137,7 +137,7 @@
     <!-- Services Section End -->
 
     <!-- Business Plan Section Start -->
-    <section id="business-plan">
+    <section id="services">
       <div class="container">
 
         <div class="row">
