--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@
       <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
         <div class="container">
           <div style="height:43px;">
-            <h1 style="color:white" class="head-title">MindVest</h1>
+            <h1 style="color:white; font-weight:bold" class="head-title">MindVest</h1>
           </div>
           <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt=""></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
