--- a/app/templates/quiz.1.html
+++ b/app/templates/quiz.1.html
@@ -235,7 +235,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>Healthcare</h4>
-                 <p>Producing long lasting organic SEO results for <br> brand of different kinds for more than a decade,<br> we understand that’s your.</p>
+                 <p>Healthcare companies work on groundbreaking <br> research and design to discover and sell<br> new drugs on the market.</p>
                   <!--IF CODE DOESN'T WORK CHANGE VALUE BACK TO ID-->
                   <!--<input type="checkbox" id="healthcare" name="healthcare">-->
                   <input type="checkbox" name="sector" value="Health Care">
@@ -254,7 +254,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>Finance</h4>
-                 <p>Producing long lasting organic SEO results for <br> brand of different kinds for more than a decade,<br> we understand that’s your.</p>
+                 <p> The sector is made up of firms and <br> institutions that provide financial services<br> to commercial and retail customers.</p>
                  <input type="checkbox" name="sector" value="Financials">
                </div>
             </div>
@@ -271,7 +271,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>Energy</h4>
-                 <p>Producing long lasting organic SEO results for <br> brand of different kinds for more than a decade,<br> we understand that’s your.</p>
+                 <p>Catergory of stocks that are related to <br> producing or supplying energy and the<br> exploration and development of energy </p>
                  <input type="checkbox" name="sector" value="Industrials">
                </div>
             </div>
@@ -288,7 +288,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>Technology</h4>
-                 <p>Producing long lasting organic SEO results for <br> brand of different kinds for more than a decade,<br> we understand that’s your.</p>
+                 <p> Category of stocks relating to the research, <br> development and/or distribution of <br> technologically based goods and services.</p>
                  <input type="checkbox" name="sector"  value="Information Technology">
                </div>
             </div>
@@ -305,7 +305,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>Consumer</h4>
-                 <p>Producing long lasting organic SEO results for <br> brand of different kinds for more than a decade,<br> we understand that’s your.</p>
+                 <p>Category of stocks and companies that relate <br> to items purchased by individuals rather<br> than by manufacturers.</p>
                  <input type="checkbox" name="sector" value="Consumer Discretionary">
                </div>
             </div>
@@ -322,7 +322,7 @@
                </div>
                <div class="feature-info float-left">
                  <h4>Media</h4>
-                 <p>Producing long lasting organic SEO results for <br> brand of different kinds for more than a decade,<br> we understand that’s your.</p>
+                 <p> The media industry is extremely varied<br> and includes companies in animation, computer<br> games, corporate, and commercials .</p>
                  <input type="checkbox" name="sector" value="Communication Services">
                </div>
             </div>
